--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,10 +52,8 @@
 /*just bg and body style*/
 
 .container {
-    background-color: #1E2832;
-    padding-bottom: 20px;
+    background-color: #FFFFFF;
     margin-top: 10px;
-    border-radius: 5px;
 }
 
 .center {
@@ -77,11 +75,6 @@
     color: white;
 }
 
-.imgupload {
-    color: #1E2832;
-    padding-top: 40px;
-    font-size: 7em;
-}
 
 #namefile {
     color: black;
@@ -114,7 +107,7 @@ h4>strong {
 
 /*this sets the actual file input to overlay our button*/
 
-#wheel_image {
+/* #wheel_image {
     opacity: 0;
     -moz-opacity: 0;
     filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
@@ -125,13 +118,38 @@ h4>strong {
     transform: translateX(-50%);
     bottom: 40px;
     height: 50px;
+} */
+
+.choose_file {
+    position: relative;
+    display: inline-block;   
+    font: normal 14px Myriad Pro, Verdana, Geneva, sans-serif;
+    color: #3b1f2b;
+    margin-top: 2px;
+    background: white
+}
+.choose_file input[type="file"]{
+    -webkit-appearance:none; 
+    position:absolute;
+    top:0;
+    left:0;
+    opacity:0;
+    width: 100%;
+    height: 200px
 }
 
-body {
+input[type="checkbox"] {
+    display: none;
+}
+
+input[type="radio"] {
+    display: none;
+}
+/* body {
     padding: 20px;
-}
+} */
 
-.form-group input[type="checkbox"] {
+/* .form-group input[type="checkbox"] {
     display: none;
 }
 
@@ -153,7 +171,7 @@ body {
 
 .form-group input[type="checkbox"]:checked+.btn-group>label span:last-child {
     display: none;
-}
+} */
 
 @charset "UTF-8";
 .abc-checkbox {
@@ -514,7 +532,37 @@ label .form-check-input.is-invalid .abc-radio:before {
     border-color: #dc3545;
 }
 
-
 .darktext {
     color: #000000 !important;
+}
+
+
+.lighttext {
+    color: #dfdede !important;
+}
+
+.donetext {
+    color: #f18f01 !important;
+}
+
+#logo {
+    
+    max-width: 100%; 
+    height: auto; 
+}
+
+.navbar-active {
+    background-color: #a23b72 !important;
+}
+
+.back-button{
+    background-color: #f18f01 !important;
+}
+
+.light-background {
+    background-color: #dfdede !important;
+}
+
+.blue-background {
+    background-color: #2e86ab;
 }
