--- a/public/css/style.css
+++ b/public/css/style.css
@@ -569,7 +569,7 @@ label .form-check-input.is-invalid .abc-radio:before {
 }
 
 #logo {
-    
+    padding-left: 30px;
     max-width: 100%; 
     height: auto; 
 }
@@ -599,3 +599,45 @@ label .form-check-input.is-invalid .abc-radio:before {
 .footer-buttons {
     margin: 5px;
 }
+
+.city_name {
+    margin: 0px !important;
+}
+
+/**
+ * FilePond Custom Styles
+ */
+ .filepond--drop-label {
+	color: #4c4e53;
+}
+
+.filepond--label-action {
+	text-decoration-color: #babdc0;
+}
+
+.filepond--panel-root {
+	border-radius: 2em;
+	background-color: #edf0f4;
+	height: 1em;
+}
+
+.filepond--item-panel {
+	background-color: #595e68;
+}
+
+.filepond--drip-blob {
+	background-color: #7f8a9a;
+}
+
+
+/**
+ * Page Styles
+ */
+/* html {
+	padding:30vh 0 0;
+}
+
+body {
+	max-width: 20em;
+	margin: 0 auto;
+} */
