--- a/public/css/style.css
+++ b/public/css/style.css
@@ -651,3 +651,13 @@ body {
 	max-width: 20em;
 	margin: 0 auto;
 } */
+
+.marker {
+    background-image: url('../images/wheel.svg');
+    background-size: cover;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  
