--- a/public/css/style.css
+++ b/public/css/style.css
@@ -653,10 +653,10 @@ body {
 } */
 
 .marker {
-    background-image: url('../images/wheel.svg');
+    background-image: url('https://i.imgur.com/MK4NUzI.png');
     background-size: cover;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 50px;
     border-radius: 50%;
     cursor: pointer;
   }
