--- a/public/css/style.css
+++ b/public/css/style.css
@@ -685,3 +685,17 @@ body {
     background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='29' height='29' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg' fill='%23333'%3E%3Cpath d='M10 4C9 4 9 5 9 5v.1A5 5 0 005.1 9H5s-1 0-1 1 1 1 1 1h.1A5 5 0 009 14.9v.1s0 1 1 1 1-1 1-1v-.1a5 5 0 003.9-3.9h.1s1 0 1-1-1-1-1-1h-.1A5 5 0 0011 5.1V5s0-1-1-1zm0 2.5a3.5 3.5 0 110 7 3.5 3.5 0 110-7z'/%3E%3Ccircle cx='10' cy='10' r='2'/%3E%3C/svg%3E");
   }
   
+  #tab_classification {
+      margin-bottom: 30px;
+  }
+
+  #video {
+    /* override other styles to make responsive */
+    width: 100%    !important;
+    height: calc(100vh - 350px)   !important;
+    border: 5px solid gray
+  }
+
+  .mapboxgl-ctrl-geocoder {
+      width: 80px !important;
+  }
