--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,31 @@
+/* @media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+    html {
+      transform: rotate(-90deg);
+      transform-origin: left top;
+      width: 100vh;
+      overflow-x: hidden;
+      position: absolute;
+      top: 100%;
+      left: 0;
+    }
+  } */
+
+  @media only screen and (orientation:landscape) {
+    #turn{ display:block; }
+    #container{ display:none; }
+  }
+  @media only screen and (orientation:portrait) {
+    #turn{ display:none; }
+    #container{ display:block; }
+  }
+
+  /* @media only screen and (orientation:landscape){
+    body {
+      height: 100vw;
+      transform: rotate(90deg);
+    }
+  } */
+
 body {
     display:flex;
     flex-direction:column;
