--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,6 +36,7 @@ body {
     display:flex;
     flex-direction:column;
     min-height:100vh;
+    margin-bottom: 100px;
 }
 
 .navbar {
@@ -48,7 +49,7 @@ body {
     top: 0;
     bottom: 0;
     width: '100%';
-    height: calc(100vh - 350px);
+    height: 50vh;
 }
 
 .visually-hidden {
