--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,11 @@
       left: 0;
     }
   } */
+
+  html {
+    scroll-behavior: smooth;
+  }
+
   @media only screen {
     #turn{ display:none; }
     #container{ display:block; }
@@ -36,7 +41,27 @@ body {
     display:flex;
     flex-direction:column;
     min-height:100vh;
-    margin-bottom: 100px;
+    margin-bottom: 0px;
+    width: 100%
+}
+
+.content {
+    padding-bottom: 60px;
+}
+
+.footer {
+    width: 100%;
+    height: 60px;
+    position: fixed;
+    margin-bottom: 50px;
+    bottom: 0;
+    right: 0;
+    left: 0;
+}
+
+.logodiv {
+    margin-right: 0;
+    margin-left: 0;
 }
 
 .navbar {
@@ -257,6 +282,13 @@ label .form-check-input.is-invalid .abc-radio:before {
 }
 
 .full-opacity {
+    opacity: 1;
+}
+
+.btn:disabled,
+.btn[disabled] {
+    background-color: #606060 !important;
+    color: #000000 !important;
     opacity: 1;
 }
 /**
