--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,7 +42,8 @@ body {
     flex-direction:column;
     min-height:100vh;
     margin-bottom: 0px;
-    width: 100%
+    width: 100%;
+    height: 80% !important;
 }
 
 .content {
