--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,10 +54,11 @@ body {
     width: 100%;
     height: 60px;
     position: fixed;
-    margin-bottom: 50px;
+    padding-bottom: 50px;
     bottom: 0;
     right: 0;
     left: 0;
+    background-color: rgb(255, 255, 255);
 }
 
 .logodiv {
@@ -75,7 +76,7 @@ body {
     top: 0;
     bottom: 0;
     width: '100%';
-    height: 50vh;
+    height: 60vh;
 }
 
 .visually-hidden {
