Added loader, critical etc.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -354,3 +354,5 @@ body {
   .mapboxgl-ctrl-geocoder {
       width: 80px !important;
   }
+
+  #map {background: transparent url(../images/loader.svg) no-repeat center center;}
